# repo-pilot

./: README.md
.cursor/rules/: ui-design.mdc
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: repository.py
backend/app/core/: config.py  git_environment.py  logger.py  prompt_config.py  timer.py
backend/app/prompt/: __init__.py  prompt_builder.py  prompt_loader.py  prompt_registry.py  prompt_renderer.py
backend/app/prompts/: README.md  summary_prompt_v1.md  summary_prompt_v2.md
backend/app/schemas/: context.py  knowledge.py  parser.py  repository.py
backend/app/services/: configuration_extractor.py  context_builder.py  dependency_extractor.py  entry_point_extractor.py  file_reader_service.py  github_service.py  language_extractor.py  llm_client.py  parser_service.py  prompt_builder.py  repository_analyzer.py  repository_clone_service.py  repository_file_reader_service.py  repository_knowledge_builder.py  repository_parser_service.py  repository_service.py  repository_summary_service.py
backend/app/utils/: workspace.py
docs/: ALTER.md  PRD.md  PROMPT_ENGINEERING.md  TASK.md  prompt-guidelines.md  prompt-history.md  prompt-issues.md  prompt-v2.md  prompt-workflow.md
docs/benchmark/: README.md  benchmark-repositories.md  benchmark-results.md  benchmark-template.md  evaluation-guide.md  evaluation-rubric.md  repositories.md
docs/benchmark/prompt-history/: prompt-v1.md
docs/benchmark/results/: README.md  result-template.md
docs/prompt/: README.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx  (+1 more)
(+39 files in other folders)
