[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "gitpython>=3.1.50",
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.49.0",
]
